--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!doctype html>
 <html>
+
 <head>
-    <title>Our Funky HTML Page</title>
-    <meta name="description" content="Our first page">
-    <meta name="keywords" content="html tutorial template">
+  <title>Our Funky HTML Page</title>
 </head>
+
 <body>
-  Content goes here.
+  <p>Content goes here.</p>
 </body>
+
 </html>
